# trading-zentrale

./: .env.txt  .gitignore  PATCHING.md  README_PATCH_B2_10_1b.txt  STREAMLIT_ANLEITUNG.md  Thonny.lnk  Watchlist Master 2026-voll.xlsx  app.py  config.py  dashboard_gen.py  fix_everything.py  fix_final.py  index.html  main.py  pyproject.toml  pyproject.toml.txt  requirements.txt  run.py  streamlit_dashboard.py  test_gen.py  test_tel.py  watchlist.csv
Müll/: Dashboard3.py  Dashboard_Gold_V19.py  Dashboard_Online.py  Emergency_Repair.py.py  Portfolio_Fix.py  Themenfindung Bachelor Frau Aleks.docx  Update_Regeln.py  Watchlist Master 2026.xlsx  Watchlist_2026 - Kopie.py  Watchlist_2026-v1.txt  Watchlist_2026-v2.txt  Watchlist_2026.txt  Watchlist_Scanner_v27.py  google_key.json  requirements.txt
alerts/: telegram.py
artifacts/: holdings_legacy.csv
cloud/: auth.py  repository.py
configs/: app_config_legacy.py  briefing.yaml  briefing_schema.json  watchlist_contract.json
docs/: ANALYSE_REPORT.md  OPERATING_PLAYBOOK.md  RELEASE_NOTES.md  diff_base_to_1n_clean.patch  release_manifest.json
market/: crv.py  elliott.py  forex.py  fundamental.py  montecarlo.py  scoring.py  yahoo.py
scripts/: build_all.py  calibrate_top.py  enrich_official_taxonomy.py  fix_contract_cols_post.py  fix_workflow_add_contract_step.py  fix_workflow_yaml.py  freeze_golden.py  generate_briefing.py  generate_briefing_realities.py  generate_history_delta.py  generate_macro_chain_signal.py  generate_reality_check.py  generate_segment_monitor.py  import_pillars_from_xlsx.py  patch_ci_add_fix_step.py  (+7 more)
(+129 files in other folders)
